--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Diagnal Movies - A modern movie listing application"
+    />
     <title>Diagnal Movies - by Vishal Gupta</title>
+    <script type="module" src="/src/main.tsx" defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
